# incr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNCTIONAL.md  INSTRUCTIONS.md  LICENSE  README.md  demo.sh  hello.py  incr.sh  out.txt  pyproject.toml  requirements.txt  run.sh  run_benchmarks.sh  script.sh  script1.sh  script2.sh  setup.sh  test.sh  test_incr_observe.sh  transformed.sh  with_cache.sh  without_cache.sh
agent/: README.md  run_bench.sh
agent/benchmarks/: bench.sh  plot.py  results.txt  run.sh
agent/docs/: ARCHITECTURE_ANALYSIS.md  BENCHMARK_RUN_CONTEXT.md  EVALUATION_BENCHMARK_SUITE.md  FINDINGS.md  OBSERVE_INTEGRATION_REVIEW.md
agent/tests/: common.sh  (+6 more)
agents/: BENCHMARK_SUITE_REPRO.md  CONTEXT.md  EVALUATION.md  README.md  REPRODUCE.md  prompt.txt  test_incr_observe.sh
benchmarks/: koala_inference.txt
evaluation/: .gitignore  PUSH_SUMMARY.md  README.md  check_bench_progress.sh  execute.sh  incr.sh  incrementize.py  insert.py  monitor_benchmarks.sh  plot.py  run.sh  run_bench_background.sh  run_parallel.sh  run_smoke_min.sh  verify_bio_ngrams.sh  verify_outputs.sh  verify_speedup.sh
koala_inference/: results.txt
main/: incr.sh
overhead/: with_try.sh  without_try.sh
python/: cache.py  debug_log.txt  file_trace.py
scripts/: up.sh
src/: annotation.rs  batch_executor.rs  cache.rs  command.rs  command_io.rs  config.rs  execution.rs  insert.py  main.rs  ops.rs  stream_executor.rs
tee-cache/: Cargo.toml
test_data/: small.txt
war_and_peace/: large_results.txt  single_results.txt  test.sh  with_cache.sh  without_cache.sh
(+850 files in other folders)
