[package]
name = "incr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2.176"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }